# searx

./: pyproject.toml  requirements-dev.txt  requirements.txt  searx.nix  settings.yml  shell.nix
